--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
@@ -24,6 +23,8 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
         "gh-pages": "^6.1.1",
-        "vite": "^5.3.1"
+        "vite": "^5.3.1",
+        "vite-plugin-compression": "^0.5.1",
+        "vite-plugin-html-minifier": "^1.0.4"
     }
 }
